saving before modifications

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             <div class="col-sm-9 fill">
                 <div id="forgeViewer"></div>
                 <img src="https://cdn.autodesk.io/logo/black/stacked.png" id="imlogo">
-                <label id="lbmainlabel">TestText </label>
+                <!-- <label id="lbmainlabel">TestText </label> -->
                 <button id="btconfig">Configs</button>
 
             </div>
